--- a/src/css/angular-carousel.scss
+++ b/src/css/angular-carousel.scss
@@ -1,52 +1,80 @@
 input[type=range] {
-  width:300px;
+  width: 300px;
 }
 
 ul[rn-carousel] {
-  overflow:hidden;
-  padding:0;
+  overflow: hidden;
+  padding: 0;
   white-space: nowrap;
   position: relative;
-  perspective:1000px;
+  -webkit-perspective: 1000px;
+  perspective: 1000px;
   -ms-touch-action: pan-y;
   touch-action: pan-y;
   > li {
-    color:black;
+    color: black;
+    -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
     overflow: visible;
     vertical-align: top;
-    position:absolute;
-    left:0;
-    right:0;
+    position: absolute;
+    left: 0;
+    right: 0;
     white-space: normal;
-    padding:0;
-    margin:0;
-    list-style-type:none;
-    width:100%;
-    height:100%;
-    display:inline-block;
+    padding: 0;
+    margin: 0;
+    list-style-type: none;
+    width: 100%;
+    height: 100%;
+    display: inline-block;
   }
 }
-
 /* prevent flickering when moving buffer */
+
 ul[rn-carousel-buffered] > li {
-  display:none;
+  display: none;
 }
 
 ul[rn-carousel-transition="hexagon"] {
-  overflow:visible;
+  overflow: visible;
 }
 
+ul[rn-carousel-transition="mytune"] {
+  overflow: visible;
+  // text-align: center;
+  width: 100%;
+  height: 200px;
+  li {
+    will-change: transform;
+    -webkit-transform: translateZ(0);
+    transform-origin: center center;
+    transform: translateZ(0);
+    transition: -webkit-transform 0.4s ease-in-out;
+    transition: transform 0.4s ease-in-out;
+    cursor: hand;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    width: 150px;
+    -webkit-box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.75);
+    box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.75);
+  }
+}
 /* indicators */
+
 div.rn-carousel-indicator span {
-  cursor:pointer;
+  cursor: pointer;
   color: #666;
   &.active {
     color: white
   }
 }
-
 /* prev/next controls */
+
 .rn-carousel-control {
   transition: opacity 0.2s ease-out;
   font-size: 2rem;
@@ -57,14 +85,13 @@ div.rn-carousel-indicator span {
   &:hover {
     opacity: 1;
   }
-
   &.rn-carousel-control-prev {
+    display: inline-block;
     left: 0.5em;
     &:before {
       content: "<";
     }
   }
-
   &.rn-carousel-control-next {
     right: 0.5em;
     &:before {
